added Google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="theme-color" content="#FFFFFF" />
+
+    <meta name="description" content="Webosium - Symposiums on the web" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <title>Webosium</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
